--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "encrypted-dotenv",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "This packages uses dotenv parsing method to read the environment variables. It can create a vault where we have multiple environments stored",
   "main": "./lib/lib.js",
   "types": "./lib/lib.d.ts",
@@ -26,21 +26,23 @@
     "format:fix": "pretty-quick --staged"
   },
   "bin": {
-    "encrypted-dotenv": "./lib/cli/cli.js"
+    "encrypted-dotenv": "./lib/cli/cli.js",
+    "encrypted-dotenv-interactive": "./lib/cli/interactive-cli.js"
   },
   "dependencies": {
-    "dotenv": "~16.3.1",
     "chalk": "~4.1.2",
-    "inquirer": "~8.2.4",
     "clear": "~0.1.0",
+    "dotenv": "~16.3.1",
+    "encrypted-dotenv": "file:encrypted-dotenv-1.0.4.tgz",
+    "generate-password": "~1.7.0",
+    "inquirer": "~8.2.4",
     "jest": "~29.5.0",
     "np": "~7.6.2",
     "rimraf": "~3.0.2",
     "ts-jest": "~29.1.0",
     "tsc-watch": "~5.0.3",
     "typescript": "~5.1.3",
-    "yargs": "~17.5.1",
-    "generate-password": "~1.7.0"
+    "yargs": "~17.5.1"
   },
   "devDependencies": {
     "@types/chalk": "~0.4.31",
@@ -48,19 +50,18 @@
     "@types/inquirer": "~8.2.1",
     "@types/jest": "~29.5.2",
     "@types/node": "~20.3.1",
-    "jest": "~29.5.0",
-    "ts-jest": "~29.1.0",
-    "typescript": "~5.1.3",
-
-    "prettier": "~2.7.1",
-    "pretty-quick": "~3.1.3",
+    "@typescript-eslint/eslint-plugin": "~5.29.0",
+    "@typescript-eslint/parser": "~5.29.0",
     "eslint": "~8.18.0",
     "eslint-config-prettier": "~8.5.0",
     "eslint-plugin-import": "~2.26.0",
     "eslint-plugin-import-path": "^0.0.2",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "@typescript-eslint/eslint-plugin": "~5.29.0",
-    "@typescript-eslint/parser": "~5.29.0"
+    "jest": "~29.5.0",
+    "prettier": "~2.7.1",
+    "pretty-quick": "~3.1.3",
+    "ts-jest": "~29.1.0",
+    "typescript": "~5.1.3"
   },
   "repository": {
     "type": "git",
