--- a/package.json
+++ b/package.json
@@ -1,104 +1,78 @@
 {
-  "name": "encrypted-dotenv",
-  "version": "1.0.5",
-  "description": "This packages uses dotenv parsing method to read the environment variables. It can create a vault where we have multiple environments stored",
-  "main": "./lib/lib.js",
-  "types": "./lib/lib.d.ts",
-  "exports": {
-    ".": {
-      "types": "./lib/lib.d.ts",
-      "require": "./lib/lib.js",
-      "default": "./lib/lib.js"
+    "name": "encrypted-dotenv",
+    "version": "1.0.5",
+    "description": "This packages uses dotenv parsing method to read the environment variables. It can create a vault where we have multiple environments stored",
+    "main": "./lib/lib.js",
+    "types": "./lib/lib.d.ts",
+    "exports": {
+        ".": {
+            "types": "./lib/lib.d.ts",
+            "require": "./lib/lib.js",
+            "default": "./lib/lib.js"
+        },
+        "./configure": "./lib/configure.js",
+        "./package.json": "./package.json"
     },
-    "./configure": "./lib/configure.js",
-    "./package.json": "./package.json"
-  },
-  "scripts": {
-    "create:package": "npm run build && npm pack",
-    "test": "npm run build && NODE_ENV=test jest --detectOpenHandles",
-    "test:win": "npm run build && jest --detectOpenHandles",
-    "build": "rimraf lib && tsc",
-    "start": "rimraf lib && tsc-watch -p tsconfig.json --onSuccess \"npm run tsc:watch:build:success\"",
-    "tsc:watch:build:success": "node --inspect lib/cli/cli.js -p 8081 --dot-env-files-directory=\"src/files\"",
-    "lint": "prettier --check \"{src,apps,libs,test}/**/*.ts\" && eslint \"{src,apps,libs,test}/**/*.ts\" --max-warnings 0",
-    "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix --max-warnings 0",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "format:fix": "pretty-quick --staged"
-  },
-  "bin": {
-    "encrypted-dotenv": "./lib/cli/cli.js",
-    "encrypted-dotenv-interactive": "./lib/cli/interactive-cli.js"
-  },
-  "dependencies": {
-    "chalk": "~4.1.2",
-    "clear": "~0.1.0",
-    "dotenv": "~16.3.1",
-    "generate-password": "~1.7.0",
-    "inquirer": "~8.2.4",
-    "jest": "~29.5.0",
-    "np": "~7.6.2",
-    "rimraf": "~3.0.2",
-    "ts-jest": "~29.1.0",
-    "tsc-watch": "~5.0.3",
-    "typescript": "~5.1.3",
-    "yargs": "~17.5.1"
-  },
-  "devDependencies": {
-    "@types/chalk": "~0.4.31",
-    "@types/clear": "~0.1.2",
-    "@types/inquirer": "~8.2.1",
-    "@types/jest": "~29.5.2",
-    "@types/node": "~20.3.1",
-    "@typescript-eslint/eslint-plugin": "~5.29.0",
-    "@typescript-eslint/parser": "~5.29.0",
-    "eslint": "~8.18.0",
-    "eslint-config-prettier": "~8.5.0",
-    "eslint-plugin-import": "~2.26.0",
-    "eslint-plugin-import-path": "^0.0.2",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "jest": "~29.5.0",
-    "prettier": "~2.7.1",
-    "pretty-quick": "~3.1.3",
-    "ts-jest": "~29.1.0",
-    "typescript": "~5.1.3"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Houzy-AG/encrypted-dotenv.git"
-  },
-  "keywords": [
-    "encrypted-dotenv"
-  ],
-  "author": "HouzyAg",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Houzy-AG/encrypted-dotenv/issues"
-  },
-  "homepage": "https://github.com/Houzy-AG/encrypted-dotenv#readme",
-  "files": [
-    "lib/**/*"
-  ],
-  "jest": {
-    "globals": {
-      "ts-jest": {
-        "tsConfig": "tsconfig.test-ci.json",
-        "diagnostics": false,
-        "isolatedModules": true
-      }
+    "scripts": {
+        "create:package": "npm run build && npm pack",
+        "test": "NODE_ENV=test jest",
+        "build": "rimraf lib && tsc",
+        "start": "rimraf lib && tsc-watch -p tsconfig.json --onSuccess \"npm run tsc:watch:build:success\"",
+        "tsc:watch:build:success": "node --inspect lib/cli/cli.js -p 8081 --dot-env-files-directory=\"src/files\"",
+        "lint": "prettier --check \"{src,apps,libs,test}/**/*.ts\" && eslint \"{src,apps,libs,test}/**/*.ts\" --max-warnings 0",
+        "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix --max-warnings 0",
+        "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+        "format:fix": "pretty-quick --staged"
     },
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
+    "bin": {
+        "encrypted-dotenv": "./lib/cli/cli.js",
+        "encrypted-dotenv-interactive": "./lib/cli/interactive-cli.js"
+    },
+    "dependencies": {
+        "chalk": "~4.1.2",
+        "clear": "~0.1.0",
+        "dotenv": "~16.3.1",
+        "generate-password": "~1.7.0",
+        "inquirer": "~8.2.4",
+        "np": "~7.6.2",
+        "rimraf": "~3.0.2",
+        "tsc-watch": "~5.0.3",
+        "yargs": "~17.5.1"
+    },
+    "devDependencies": {
+        "@jest/globals": "^29.5.0",
+        "@types/chalk": "~0.4.31",
+        "@types/clear": "~0.1.2",
+        "@types/inquirer": "~8.2.1",
+        "@types/jest": "~29.5.2",
+        "@types/node": "~20.3.1",
+        "@typescript-eslint/eslint-plugin": "~5.29.0",
+        "@typescript-eslint/parser": "~5.29.0",
+        "eslint": "~8.18.0",
+        "eslint-config-prettier": "~8.5.0",
+        "eslint-plugin-import": "~2.26.0",
+        "eslint-plugin-import-path": "^0.0.2",
+        "eslint-plugin-unused-imports": "^2.0.0",
+        "jest": "~29.5.0",
+        "prettier": "~2.7.1",
+        "pretty-quick": "~3.1.3",
+        "ts-jest": "~29.1.0",
+        "typescript": "~5.1.3"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Houzy-AG/encrypted-dotenv.git"
+    },
+    "keywords": [
+        "encrypted-dotenv"
     ],
-    "rootDir": "",
-    "bail": true,
-    "collectCoverage": false,
-    "testRegex": ".spec.ts$",
-    "transform": {
-      "~.+\\.(t|j)s$": "ts-jest"
+    "author": "HouzyAg",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/Houzy-AG/encrypted-dotenv/issues"
     },
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
-  }
+    "homepage": "https://github.com/Houzy-AG/encrypted-dotenv#readme",
+    "files": [
+        "lib/**/*"
+    ]
 }
