--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
         "build": "rimraf lib && tsc",
         "start": "rimraf lib && tsc-watch -p tsconfig.json --onSuccess \"npm run tsc:watch:build:success\"",
         "tsc:watch:build:success": "node --inspect lib/cli/cli.js -p 8081 --dot-env-files-directory=\"src/files\"",
-        "lint": "prettier --check \"{src,apps,libs,test}/**/*.ts\" && eslint \"{src,apps,libs,test}/**/*.ts\" --max-warnings 0",
-        "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix --max-warnings 0",
+        "lint": "prettier --check \"{src,apps,libs,test}/**/*.ts\" && eslint \"{src,apps,libs,test}/**/*.ts\"",
+        "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
         "format:fix": "pretty-quick --staged"
     },
@@ -37,7 +37,8 @@
         "np": "~7.6.2",
         "rimraf": "~3.0.2",
         "tsc-watch": "~5.0.3",
-        "yargs": "~17.5.1"
+        "yargs": "~17.5.1",
+        "lodash": "~4.17.21"
     },
     "devDependencies": {
         "@jest/globals": "^29.5.0",
@@ -46,6 +47,7 @@
         "@types/inquirer": "~8.2.1",
         "@types/jest": "~29.5.2",
         "@types/node": "~20.3.1",
+        "@types/lodash": "~4.14.195",
         "@typescript-eslint/eslint-plugin": "~5.29.0",
         "@typescript-eslint/parser": "~5.29.0",
         "eslint": "~8.18.0",
@@ -57,7 +59,7 @@
         "prettier": "~2.7.1",
         "pretty-quick": "~3.1.3",
         "ts-jest": "~29.1.0",
-        "typescript": "~5.1.3"
+        "typescript": "~5.0.4"
     },
     "repository": {
         "type": "git",
