--- a/package.json
+++ b/package.json
@@ -30,15 +30,10 @@
     },
     "dependencies": {
         "chalk": "~4.1.2",
-        "clear": "~0.1.0",
         "dotenv": "~16.3.1",
         "generate-password": "~1.7.0",
         "inquirer": "~8.2.4",
-        "np": "~7.6.2",
-        "rimraf": "~3.0.2",
-        "tsc-watch": "~5.0.3",
-        "yargs": "~17.5.1",
-        "lodash": "~4.17.21"
+        "yargs": "~17.5.1"
     },
     "devDependencies": {
         "@jest/globals": "^29.5.0",
@@ -59,6 +54,8 @@
         "prettier": "~2.7.1",
         "pretty-quick": "~3.1.3",
         "ts-jest": "~29.1.0",
+        "tsc-watch": "~5.0.3",
+        "rimraf": "~3.0.2",
         "typescript": "~5.0.4"
     },
     "repository": {
