--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
         "sourceMap": true,
         "incremental": true,
         "noImplicitAny": true,
-        "strictNullChecks": true,
+        "strict": true,
         "allowSyntheticDefaultImports": true
     },
     "include": [
