--- a/package.json
+++ b/package.json
@@ -37,12 +37,13 @@
     },
     "devDependencies": {
         "@jest/globals": "^29.5.0",
+        "@total-typescript/ts-reset": "^0.4.2",
         "@types/chalk": "~0.4.31",
         "@types/clear": "~0.1.2",
         "@types/inquirer": "~8.2.1",
         "@types/jest": "~29.5.2",
-        "@types/node": "~20.3.1",
         "@types/lodash": "~4.14.195",
+        "@types/node": "~20.3.1",
         "@typescript-eslint/eslint-plugin": "~5.29.0",
         "@typescript-eslint/parser": "~5.29.0",
         "eslint": "~8.18.0",
@@ -53,9 +54,9 @@
         "jest": "~29.5.0",
         "prettier": "~2.7.1",
         "pretty-quick": "~3.1.3",
+        "rimraf": "~3.0.2",
         "ts-jest": "~29.1.0",
         "tsc-watch": "~5.0.3",
-        "rimraf": "~3.0.2",
         "typescript": "~5.0.4"
     },
     "repository": {
